header alignment fix

--- a/css/global.css
+++ b/css/global.css
@@ -25,8 +25,8 @@ header {
 }
 /* Container for all header content */
 .header-content {
-  float: left;
-  text-align: center;
+  display: inline-block;
+  text-align: left;
   margin: 50px 50px 0px 50px;
 }
 
@@ -36,6 +36,7 @@ header h1 {
   font-weight: bold;
   font-style: italic;
   letter-spacing: 3px;
+  text-align: center;
   text-shadow: 2px 2px 4px #696969;
 }
 /* Call-to-action - reservations phone number */
@@ -44,7 +45,16 @@ header h2 {
   font-size: 20px;
   font-weight: normal;
   font-style: italic;
+  text-align: center;
   letter-spacing: 3px;
+}
+.logo-wrap {
+  text-align: center;
+}
+/* Sets logo size */
+.logo {
+  width: 322px;
+  height: 206px;
 }
 /* Navigation styles */
   nav {
@@ -81,11 +91,6 @@ a:hover, .nav-active:hover {
 .nav-strip {
     background: rgba(114, 137, 158, 0.3);
     height: 90px;
-}
-/* Sets logo size */
-.logo {
-  width: 322px;
-  height: 206px;
 }
 /* END HEADER STYLES */
 /* Main Content Styles */
